--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,8 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     implementation 'com.github.bumptech.glide:glide:4.15.1'
-    implementation 'androidx.cardview:cardview:1.0.0'
+
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
