--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,6 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.gridlayout:gridlayout:1.0.0'
     def nav_version = "2.5.0"
     def retrofit_version="2.9.0"
     def coroutine_version="1.3.5"
@@ -64,6 +63,11 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.15.1'
 
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.4.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
