--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,10 +25,10 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v2
 
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          java-version: 1.8
+          java-version: '17'
 
       - name: Build debug APK
         run: ./gradlew assembleDebug --stacktrace
